--- a/ParkSmart/pom.xml
+++ b/ParkSmart/pom.xml
@@ -67,6 +67,14 @@
 			<artifactId>tomcat-jasper</artifactId>
 			<version>10.1.20</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
