--- a/ParkSmart/src/main/resources/application.properties
+++ b/ParkSmart/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.datasource.password=Angelin#18
 
 server.port=9000
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=angelinsukirtha18@gmail.com
+spring.mail.password=pvgswskwjfpybtke
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
+
+
