--- a/ParkSmart/src/main/resources/application.properties
+++ b/ParkSmart/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.mail.password=pvgswskwjfpybtke
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 
 
